`shopContainer` Overflow - Fix for Issue #10
Former-commit-id: 41a447e9bccbe4c7dce12810f318a632bf72c9f2

--- a/client/css/interface.css
+++ b/client/css/interface.css
@@ -482,6 +482,7 @@
 }
 
 #shopContainer {
+    overflow-y: scroll;
     position: absolute;
     font-family: 'AdvoCut', sans-serif;
     top: 8%;
